afo-pi-cluster/kustomize/system-apps/oidc-issuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-oidc
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: oidc.cloudhaven.work
      http:
        paths:
          - path: /.well-known/openid-configuration
            pathType: Exact
            backend:
              service:
                name: kubernetes
                port:
                  number: 443
          - path: /openid/v1/jwks
            pathType: Exact
            backend:
              service:
                name: kubernetes
                port:
                  number: 443
